clusters/hive/apps/firefly-iii/k8s-manifests/firefly-iii-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    k8s-app: firefly-iii
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: firefly-iii
  template:
    metadata:
      labels:
        k8s-app: firefly-iii
    spec:
      containers:
        - image: fireflyiii/core:version-6.3.1
          name: firefly-iii
          resources:
            requests:
              cpu: 150m
              memory: 300Mi
            limits:
              # cpu: 400m
              memory: 300Mi
          ports:
            - containerPort: 8080
              name: firefly-iii
          volumeMounts:
            - mountPath: "/var/www/html/firefly-iii/storage/upload"
              name: firefly-iii-upload
          imagePullPolicy: Always
      volumes:
        - name: firefly-iii-upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload
