clusters/hive/apps/firefly-iii/k8s-manifests/mariadb.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: firefly-iii
  labels:
    k8s-app: mariadb
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: mariadb
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: mariadb
    spec:
      containers:
        - image: lscr.io/linuxserver/mariadb:11.4.12
          name: mariadb
          resources:
            requests:
              cpu: 150m
              memory: 500Mi
            limits:
              memory: 500Mi
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb
              mountPath: /config
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
