clusters/hive/apps/firefly-iii/k8s-manifests/firefly-iii.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    app: firefly-iii
spec:
  ports:
    - name: firefly-iii
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    k8s-app: firefly-iii
  sessionAffinity: None
  type: ClusterIP
