clusters/hive/apps/firefly-iii/k8s-manifests/fints-importer.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fints-importer
  namespace: firefly-iii
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: finances-fints-importer.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: fints-importer
                port:
                  number: 8080
            path: /
            pathType: Prefix
